src/test/deca/codegen/valid/heritage_9.deca
// Description:
//    test d'heritage
//
// Resultats:
//    3
//
// Historique:
//    cree le 23/01/2017
class A {
	int x = 2;
	int M(int a) {
		return a;
	}
}
class B extends A {
	int y;
}
class C extends B {
	
}
{	
	
	C c = new C();
	c.x = c.x + c.M(1);
	print(c.x);
}